--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-django
-djangorestframework
-djangorestframework-gis
-django-leaflet
+asgiref==3.5.2
+Django==3.2.15
+django-environ==0.9.0
+django-leaflet==0.28.3
+djangorestframework==3.13.1
+djangorestframework-gis==1.0
+psycopg2-binary==2.9.3
+pytz==2022.1
+sqlparse==0.4.2
+typing-extensions==4.3.0
