--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-leaflet==0.28.3
 djangorestframework==3.13.1
 djangorestframework-gis==1.0
 psycopg2-binary==2.9.3
+postgis
 pytz==2022.1
 sqlparse==0.4.2
 typing-extensions==4.3.0
