api-leaflet-config

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
-POSTGRES_PASS=Chandra@123
+POSTGRES_PASSWORD=Chandra@123
 POSTGRES_DB=gisdjango
 DATABASE=postgres
 PG_HOST=postgres-db
