--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
       context: ./client
       dockerfile: Dockerfile.dev
     container_name: api_frontend
+    ports:
+      - 3000:3000
     volumes:
-      - ./app/node_modules
       - ./client:/app
     depends_on:
       - gisdjango
