--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,6 @@ services:
       context: ./client
       dockerfile: Dockerfile.dev
     container_name: api_frontend
-    ports:
-      - 3000:3000
     volumes:
       - ./client:/app
     depends_on:
@@ -38,6 +36,7 @@ services:
     ports:
       - 5432:5432
     volumes:
+      - ./node_modules:/app/node_modules
       - postgres_data:/var/lib/postgresql
     environment:
       - POSTGRES_USER=postgres
