static-file-location

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     container_name: gis-django
     command: >
       sh -c  "python manage.py migrate --noinput &&
+              python manage.py collectstatic --noinput &&
               python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
