--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,7 +25,20 @@ server {
         proxy_set_header Connection "Upgrade";
     }
 
+    location /static/ {
+    autoindex on;
+    alias /static;
+    }
+
     location /api/hospital {
+
+        proxy_pass http://gisdjango;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /admin {
 
         proxy_pass http://gisdjango;
         proxy_redirect off;
