static-files-served

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ db.sqlite3
 db.sqlite3-journal
 media
 static
+staticfiles
+static_volume
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
