--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,24 +25,27 @@ server {
         proxy_set_header Connection "Upgrade";
     }
 
-    location /static/ {
-    autoindex on;
-    alias /static;
+    location /staticfiles/ {
+        alias /app/staticfiles/;
+    }
+
+    location /mediafiles/ {
+        alias /app/mediafiles/;
     }
 
     location /api/hospital {
 
         proxy_pass http://gisdjango;
-        proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
     }
 
     location /admin {
 
         proxy_pass http://gisdjango;
-        proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
     }
 }
