--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
 upstream gisdjango {
-    server gisdjango:8000; 
+    server gisdjango:8000;
 }
 
 upstream client {
@@ -46,6 +46,13 @@ server {
         proxy_pass http://gisdjango;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
+    location /redocument {
+        proxy_pass http://gisdjango;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
         proxy_redirect off;
     }
 }
