--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-environ==0.9.0
 django-leaflet==0.28.3
 djangorestframework==3.13.1
 djangorestframework-gis==1.0
+drf-yasg
 psycopg2-binary==2.9.3
 postgis
 pytz==2022.1
